--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ serde_json = "1.0.111"
 thiserror = "1.0.56"
 serde = "1.0.195"
 
+[target.'cfg(target_family = "wasm")'.dependencies]
+getrandom = { version = "0.2.11", features = ["js", "js-sys"] }
+
 [dev-dependencies]
 tokio = { version = "1.28.0", features = ["full"] }
 anyhow = "1.0.70"
